added_trannig_data

--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "22823ed4",
+   "metadata": {},
+   "source": [
+    "### Prior to feature extraction, the Sentinel-2 spectral bands must be downloaded, and the ground truth dataset—including geometries, class labels, and unique identifiers—must be compiled."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb6ec2ba",
+   "execution_count": 17,
+   "id": "1a036efc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,48 +23,86 @@
     "from rasterio.mask import mask\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6784877",
+   "id": "7ed487d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PLOT_NO', 'label', 'SURVEY_DATE', 'PLANTING_DATE', 'CROPTYPE_CODE',\n",
+       "       '2023', 'farm_id', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gpkg_path = \"input_data.gpkg\"\n",
     "gdf = gpd.read_file(gpkg_path)\n",
-    "gdf.columns\n",
-    "### Index(['PLOT_NO', 'label',  'geometry'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd49036e",
-   "metadata": {},
-   "source": [
-    "### downloaded image large area with splited part(row_col)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c432899e",
-   "metadata": {},
-   "source": [
-    "\"B2\", \"B3\", \"B4\", \"B8\" timeseries data"
+    "gdf.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67828b77",
+   "id": "6126cdca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### extract date list from one sigle folder\n",
-    "raster_path = natsorted(glob(\"/B2/row0_col0/*.tif\"))[:-1]\n",
-    "raster_path\n",
+    "raster_path = natsorted(glob(\"images/B2/*.tif\"))[:-1]\n",
+    "raster_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "756c2133",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20250101',\n",
+       " '20250115',\n",
+       " '20250201',\n",
+       " '20250215',\n",
+       " '20250301',\n",
+       " '20250315',\n",
+       " '20250401',\n",
+       " '20250415',\n",
+       " '20250501',\n",
+       " '20250515',\n",
+       " '20250601',\n",
+       " '20250615',\n",
+       " '20250701',\n",
+       " '20250715',\n",
+       " '20250801',\n",
+       " '20250815',\n",
+       " '20250901',\n",
+       " '20250915',\n",
+       " '20251001',\n",
+       " '20251015',\n",
+       " '20251101',\n",
+       " '20251115',\n",
+       " '20251201']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "date_list = []\n",
     "for file in raster_path:\n",
     "    date_list.append(os.path.basename(file)[:8])\n",
@@ -65,10 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "279708ab",
+   "execution_count": 7,
+   "id": "111be952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 857/857 [09:59<00:00,  1.43it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "grand_list = []\n",
     "for idx, row in tqdm(gdf.iterrows(), total=len(gdf)):\n",
@@ -80,7 +134,7 @@
     "    for d in date_list:\n",
     "        band_stack_l = []\n",
     "        for band in [\"B2\", \"B3\", \"B4\", \"B8\"]:\n",
-    "            file = f\"/raster_files/{band}/{d}_{band}.tif\"\n",
+    "            file = f\"images/{band}/{d}_{band}.tif\"\n",
     "            with rasterio.open(file) as src:\n",
     "                masked_image, _ = mask(src, [geom], crop=True)\n",
     "                band_stack_l.append(masked_image)\n",
@@ -100,19 +154,13 @@
     "    df = pd.DataFrame(df_list)\n",
     "    grand_list.append(df)\n",
     "grand_df = pd.concat(grand_list)\n",
-    "grand_df.to_csv(\"training_data.csv\", index=False)"
+    "grand_df.to_pickle(\"grand_df.pkl\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af0750ef",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5722375f",
+   "id": "e425e9dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,13 +168,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
